# honeybee

./: .gitignore  README.md  app.py  generate_misconfig.py  landscape_apps.json  misconfigurations.json  misconfigurations2.json  misconfigurations_catalog.json  misconfigurations_new.json  pyproject.toml  requirements.txt
honeybee/: 1_🐝_app.py  __init__.py  __main__.py  app.py
honeybee/pages/: 1_⏳_history.py  2_🌐️_network.py
honeybee/prompts/: extract_application.md  generate_dockerfile.md  list_misconfig.md  write_nuclei_rule.md
honeybee/src/: generators.py  local_deploy.py  query_history.py  settings.py  trace_tools.py  validations.py
honeybee/tabs/: dockercompose_tab.py  nuclei_tab.py
pages/: 1_history.py
prompts/: analyze_misconfig.md  find_misconfig.md  generate_dockercompose.md  generate_dockerfile.md  list_misconfig.md  write_nuclei_rule.md  write_oval_rule.md
src/: client_provider.py  generators.py  local_deploy.py  query_history.py  settings.py  validations.py
tabs/: dockerfile_tab.py
