[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhoneybee"
authors = [
  { name="Yaara Shriki", email="yaara.shriki@wiz.io" },
]
description = "HoneyBee: Misconfigured App Generator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.txt"}
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/yaaras/honeybee"
Issues = "https://github.com/yaaras/honeybee/issues"

[tool.setuptools.dynamic]
version = {attr = "honeybee.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["honeybee"]

[tool.setuptools_scm]

[project.scripts]
honeybee = "honeybee:main"
